--- a/pom.xml
+++ b/pom.xml
@@ -43,5 +43,11 @@
 			<version>5.7.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.16.1</version>
+		</dependency>
+
 	</dependencies>
 </project>
